objects/UNITY_Field_Mapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Destination_Field__c</fullName>
        <label>Destination Field</label>
        <length>83</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Destination_Object__c</fullName>
        <label>Destination Object</label>
        <length>83</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Field__c</fullName>
        <label>Source Field</label>
        <length>83</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Object__c</fullName>
        <label>Source Object</label>
        <length>83</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value_If_Null__c</fullName>
        <label>Value If Null</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>UNITY Field Mapping</label>
</CustomObject>